[package]
author = "Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"
description = "Tool to measure latency of an MQTT broker"
repository = "https://github.com/TotalKrill/mqttping-rs.git"
license = "MIT"
readme = "README.md"
name = "mqtt-ping"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive", "env"] }
indicatif = "0.17.1"
log = "0.4.17"
rand = "0.8.5"
rumqttc = { version = "0.17.0", features = ["websocket"] }
rustls = { version = "0.20.7", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6.2"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "sync"] }
url = "2.3.1"

